@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	5.33 (gritter) 12/8/05";
+	"@(#)/usr/ucb/otfdump.sl	5.34 (gritter) 12/8/05";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  5.33 (gritter) 12/8/05";
-const char creator[] = "Heirloom Documentation Tools - dpost 5.33 (gritter) 12/8/05";
+static const char sccsid[] USED = "@(#)dpost.sl  5.34 (gritter) 12/8/05";
+const char creator[] = "Heirloom Documentation Tools - dpost 5.34 (gritter) 12/8/05";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.33 (gritter) 12/8/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.34 (gritter) 12/8/05";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.33 (gritter) 12/8/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.34 (gritter) 12/8/05";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "5.33";
+const char revision[] = "5.34";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -45,7 +45,7 @@ troff.d/afm.h: * Sccsid @(#)afm.h	1.16 (gritter) 10/2/05
 troff.d/dev.h: * Sccsid @(#)dev.h	1.9 (gritter) 12/6/05
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.11 (gritter) 12/6/05
-troff.d/otf.c: * Sccsid @(#)otf.c	1.32 (gritter) 10/14/05
+troff.d/otf.c: * Sccsid @(#)otf.c	1.33 (gritter) 12/8/05
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.10 (gritter) 10/13/05
 troff.d/proto.h: * Sccsid @(#)proto.h	1.30 (gritter) 9/30/05
 troff.d/t10.c: * Sccsid @(#)t10.c	1.51 (gritter) 12/3/05
